--- a/DevelopmentProject/app/src/main/res/layout/navigation_drawer.xml
+++ b/DevelopmentProject/app/src/main/res/layout/navigation_drawer.xml
@@ -7,6 +7,8 @@
     app:menu="@menu/navigation_menu_drawer"
     app:itemTextColor="@color/nav_item_color_state"
     app:itemIconTint="@color/nav_item_color_state"
+    android:backgroundTint="@null"
+    app:itemBackground="@android:color/transparent"
     app:headerLayout="@layout/header_navigation_drawer"
     >
 
